Added NewActivity, auth listener, turned off LoginActivity logging

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,19 @@
         android:onClick="callLogout"
         />
 
+    <TextView
+        android:layout_margin="10dp"
+        android:id="@+id/login_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No activity"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Activity Requiring Login"
+        android:onClick="callNewActivity"
+        />
+
 </LinearLayout>
